--- a/booksys/app/views/books/index.html.erb
+++ b/booksys/app/views/books/index.html.erb
@@ -1,12 +1,74 @@
+<head>
+  <meta charset="utf-8">
+  <title>蔵書管理：検索</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="./js/sn3.js"></script>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  </head>
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Books</h1>
+<div id="header">
+<div id="hArea">	
 
-<table>
+	<div id="hLogo">キーワード検索</div>
+
+	<div id="hNavi">
+		<ul>
+			<li><%= link_to image_tag('/images/entry_book.jpg'), new_book_path %></li>
+			<li><a href="./EntryUser.html"><img src="/entry_user.jpg"></a></li>
+		</ul>
+	</div>
+
+	</div>
+</div>
+
+
+<div id="main">
+<div id="SchArea">
+	<div id="SchTxt">
+	<form method="post" action="cgi-bin/abc.cgi">
+		<input type="search" name="Sch" size="130" maxlength=""  placeholder="検索キーワードを入力" id="keyWord">
+		<input type="image" src="/search.jpg" onclick="document.frm.submit();" id="SchButton">
+	</form>
+	</div>
+</div>
+</div>
+
+<div id="Contents">
+<div id="SchRes">
+	
+	<div id="Squeeze">
+	<h3>絞り込みを表示</h3>
+    <div id="SquMenu">
+		<div id="Squtype">種別 <img src="/close.jpg" width="20px" onclick="changeIMG()" align=right></div>
+			<div id="typeBox">
+			<ul>
+				<li><a href="">- 図書</a></li>
+				<li><a href="">- 雑誌</a></li>
+				<li><a href="">- 漫画</a></li>
+				<li><a href="">- 絵本</a></li>
+			</ul>
+			</div>
+
+		<div id="Squpubyear">出版年 <img src="/close.jpg" width="20px" align=right></div>
+			<div class="pubyearBox">
+			<ul>
+				<li><input type="text" name="year" size="5" maxlength="4" >年</li>
+				～
+				<li><input type="text" name="year" size="5" maxlength="4" >年</li>
+			</ul>
+			</div>
+	</div>
+	</div>
+
+
+	<div id="Result"><h3>XX冊中　XX冊ヒット</h3>
+	<hr>
+	<table>
   <thead>
     <tr>
       <th>Bar no</th>
-      <th>Link no</th>
       <th>Title</th>
       <th>Title yomi</th>
       <th>Series</th>
@@ -17,20 +79,9 @@
       <th>Publisher</th>
       <th>Publisher yomi</th>
       <th>P ymd</th>
-      <th>Price</th>
-      <th>Isbn1 issn</th>
-      <th>Isbn2</th>
-      <th>Types</th>
-      <th>Collection</th>
       <th>Label1</th>
       <th>Label2</th>
       <th>Label3</th>
-      <th>Status</th>
-      <th>Lend date</th>
-      <th>Back date</th>
-      <th>Lend flg</th>
-      <th>User</th>
-      <th>Memo</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -39,7 +90,6 @@
     <% @books.each do |book| %>
       <tr>
         <td><%= book.bar_no %></td>
-        <td><%= book.link_no %></td>
         <td><%= book.title %></td>
         <td><%= book.title_yomi %></td>
         <td><%= book.series %></td>
@@ -50,28 +100,19 @@
         <td><%= book.publisher %></td>
         <td><%= book.publisher_yomi %></td>
         <td><%= book.p_ymd %></td>
-        <td><%= book.price %></td>
-        <td><%= book.isbn1_issn %></td>
-        <td><%= book.isbn2 %></td>
-        <td><%= book.types %></td>
-        <td><%= book.collection %></td>
         <td><%= book.label1 %></td>
         <td><%= book.label2 %></td>
         <td><%= book.label3 %></td>
-        <td><%= book.status %></td>
-        <td><%= book.lend_date %></td>
-        <td><%= book.back_date %></td>
-        <td><%= book.lend_flg %></td>
-        <td><%= book.user_id %></td>
-        <td><%= book.memo %></td>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+<!--        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
       </tr>
     <% end %>
   </tbody>
 </table>
+	</div>
+</div>
+</div>
 
-<br>
-
-<%= link_to 'New Book', new_book_path %>
+</body>
+</html>
