ページネーション変更
kaminari

--- a/app/views/books/_form_defo.html.erb
+++ b/app/views/books/_form_defo.html.erb
@@ -12,47 +12,47 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :バーコード番号 %><br>
+    <%= f.label :bar_no %><br>
     <%= f.number_field :bar_no %>
   </div>
   <div class="field">
-    <%= f.label :Link番号 %><br>
+    <%= f.label :link_no %><br>
     <%= f.number_field :link_no %>
   </div>
   <div class="field">
-    <%= f.label :タイトル %><br>
+    <%= f.label :title %><br>
     <%= f.text_area :title %>
   </div>
   <div class="field">
-    <%= f.label :ﾀｲﾄﾙﾖﾐ %><br>
+    <%= f.label :title_yomi %><br>
     <%= f.text_area :title_yomi %>
   </div>
   <div class="field">
-    <%= f.label :シリーズ %><br>
+    <%= f.label :series %><br>
     <%= f.text_area :series %>
   </div>
   <div class="field">
-    <%= f.label :ｼﾘｰｽﾞﾖﾐ %><br>
+    <%= f.label :series_yomi %><br>
     <%= f.text_area :series_yomi %>
   </div>
   <div class="field">
-    <%= f.label :編著者 %><br>
-    <%= f.text_area :author %>
-  </div>
-  <div class="field">
-    <%= f.label :ﾍﾝﾁｮｼｬﾖﾐ %><br>
-    <%= f.text_area :author_yomi %>
-  </div>
-  <div class="field">
-    <%= f.label :巻号 %><br>
+    <%= f.label :volume %><br>
     <%= f.text_area :volume %>
   </div>
   <div class="field">
-    <%= f.label :出版社 %><br>
+    <%= f.label :author %><br>
+    <%= f.text_area :author %>
+  </div>
+  <div class="field">
+    <%= f.label :author_yomi %><br>
+    <%= f.text_area :author_yomi %>
+  </div>
+  <div class="field">
+    <%= f.label :publisher %><br>
     <%= f.text_area :publisher %>
   </div>
   <div class="field">
-    <%= f.label :ｼｭｯﾊﾟﾝｼｬﾖﾐ %><br>
+    <%= f.label :publisher_yomi %><br>
     <%= f.text_area :publisher_yomi %>
   </div>
   <div class="field">
