--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,8 +15,8 @@
 
 	<div id="hNavi">
 		<ul>
-			<li><%= link_to image_tag('/images/entry_book.jpg'), new_book_path %></li>
-			<li><a href="./EntryUser.html"><img src="/entry_user.jpg"></a></li>
+			<li><%= link_to image_tag('entry_book.jpg'), new_book_path %></li>
+			<li><a href="./EntryUser.html"><img src="entry_user.jpg"></a></li>
 		</ul>
 	</div>
 
@@ -70,11 +70,9 @@
 
 	<div id="Result"><h3>XX冊中　XX冊ヒット</h3>
 	<hr>
-	<ul>
-  <%= render @Books %>
-</ul>
-<%= will_paginate %>
-
+	<%= page_entries_info @books %>
+	 <%= render @books %>
+	<%= paginate @books %>
 	</div>
 </div>
 </div>
