登録～検索までok
・<%= page_entries_info @shops %>がエラー
・ｃｓｓ設定が不十分

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -128,5 +128,9 @@ div#Result{
 	width: 750px;
 	margin: 0 10px;
 	float: right;
-	border: solid 1px pink; 
+}
+
+div#Result tr{
+	margin: 10px;
+	border: solid 1px pink;
 }
