--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="css/styleDetail.css">
   </head>
 <p id="notice"><%= notice %></p>
-<%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Back', books_path %>
+<%= link_to '編集画面', edit_book_path(@book) %> |
+<%= link_to '検索画面', books_path %>
 <div id="BookDetail">
 <div id="bDetailMain">
 	<div id="bAicon">
