--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,12 +4,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="./js/sn3.js"></script>
   <link rel="stylesheet" href="css/reset.css">
-<!--  <link rel="stylesheet" href="css/styleReg.css">-->
+  <link rel="stylesheet" href="css/styleReg.css">
   </head>
 <div id="header">
 <div id="hArea">	
 
-	<div id="hLogo">書籍登録</div>
+	<div id="hLogo">登録内容修正</div>
 
 	<div id="hNavi">
 		<ul><li><img src="/entry_book.jpg"></li></ul>
@@ -17,8 +17,8 @@
 
 </div>
 </div>
-
+<%= link_to '詳細画面', @book %> |
+<%= link_to '検索画面', books_path %>
 <%= render 'form' %>
 
-<%= link_to 'Show', @book %> |
-<%= link_to 'Back', books_path %>
+
