--- a/app/assets/stylesheets/styleReg.css
+++ b/app/assets/stylesheets/styleReg.css
@@ -40,7 +40,7 @@ div#regMain{
 
 div#Reg{
 	margin: 5px auto;
-	height: 700px;
+	height: 650px;
 	width: 980px;
 }
 
@@ -58,7 +58,7 @@ div#infoMain{
 	width: 50%;
 	float: left;
 	font-size: 13px;
-	background-color: pink;
+/*	background-color: pink;*/
 }
 
 #infoMain p{
@@ -74,7 +74,7 @@ div#infoEtc{
 	padding-left: 5px;
 	height: 650px;
 	font-size: 13px;
-	background-color: orange;
+/*	background-color: orange;*/
 }
 
 #infoEtc p{
