--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -76,9 +76,9 @@
 		<div class="date"><p>請求ラベル</p>
 		<%= f.text_area :label1 %>
 		</div>
-		<div class="date"><p></p><%= f.text_area :label2 %>
+		<div class="date"><p>　</p><%= f.text_area :label2 %>
 		</div>
-		<div class="date"><p></p><%= f.text_area :label3 %>
+		<div class="date"><p>　</p><%= f.text_area :label3 %>
 		</div>
 
 		<div class="date"><p>出版年月日</p>
@@ -101,13 +101,11 @@
 		</div>
 
 
-  <div class="field">
-    <%= f.label :巻号 %><br>
+  <div class="field"><p>巻号</p>
     <%= f.text_area :volume %>
   </div>
 
-  <div class="field">
-    <%= f.label :lend_flg %><br>
+  <div class="field"><p>貸出フラグ</p>
     <%= f.number_field :lend_flg %>
   </div>
 
